crates/jsonschema-macros/tests/ui/invalid_contains_type.stderr
error: 42 is not of types "boolean", "object"
 --> tests/ui/invalid_contains_type.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"contains":42}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
